Fix mobile width issue

--- a/src/blocks/food-and-drinks/food-item/styles/style.scss
+++ b/src/blocks/food-and-drinks/food-item/styles/style.scss
@@ -1,21 +1,11 @@
-
-:-ms-fullscreen .wp-block-coblocks-food-item,
-:root .wp-block-coblocks-food-item {
-	figure {
-		img {
-			min-width: 100%;
-			height: auto;
-			top: 50%;
-			left: 50%;
-			transform: translate( -50%, -50% );
-		}
-	}
-}
-
 .wp-block-coblocks-food-item {
 	flex-grow: 1;
-	width: 50%;
 	margin-top: 2.75em;
+	width: 50%;
+
+	@media all and (max-width: 514px) {
+		width: 100%;
+	}
 
 	[data-columns="3"] & {
 		flex-grow: 1;
@@ -146,5 +136,18 @@
 		margin: 0.5em 0 0 0;
 		opacity: 0.7;
 		order: 2;
+	}
+}
+
+:root .wp-block-coblocks-food-item,
+:-ms-fullscreen .wp-block-coblocks-food-item {
+	figure {
+		img {
+			height: auto;
+			left: 50%;
+			min-width: 100%;
+			top: 50%;
+			transform: translate(-50%, -50%);
+		}
 	}
 }
