Fix block food-and-drink display in IE11 (#674)
* Issue seems to be the way that IE 11 handles flex attribute.

* Similar layout in IE11.

* linted edit.js. cleaned up extra styles from food-and-drinks block related to IE11 fix.

* Added fromEntries function to polyfill for IE11.

* Finished style polyfill for IE11 on food-and-drinks block

* Added comments to fromEntries function. Comments on scss. Conditional polyfill for Object.fromEntries function.

* lint files and add one disable rule for jsx-indent

* reverting original block styles

* Improved display of food-and-drinks in IE11

* Updated comment for fromEntries and removed css comments

* Fix list-view for food-and-drinks

* Contain images on IE11. Cover is not supported.

* Setting a width for food items over flex-basis.

* Removing editor IE styles.

* Fix display of block within the block-editor.

* Fix mobile width issue

* Use (-ms-high-contrast: none), (-ms-high-contrast: active)

--- a/src/blocks/food-and-drinks/food-item/styles/editor.scss
+++ b/src/blocks/food-and-drinks/food-item/styles/editor.scss
@@ -1,7 +1,8 @@
 .wp-block-coblocks-food-item {
 	display: block;
-	flex: 1 100%;
+	flex-grow: 1;
 	padding: 0 !important;
+	width: 100% !important;
 
 	.editor-media-placeholder {
 		margin: 0 0 1.65em !important;
