--- a/src/blocks/media-card/styles/style.scss
+++ b/src/blocks/media-card/styles/style.scss
@@ -1,27 +1,3 @@
-:-ms-fullscreen,
-:root .wp-block-coblocks-media-card {
-		.wp-block-coblocks-media-card__wrapper {
-			display: flex;
-
-			.wp-block-coblocks-row__inner{
-				flex-grow: 1;
-			}
-		}
-
-		&.is-style-right  {
-			// flex-direction: row-reverse;
-			figure {
-				order:2;
-			}
-			.wp-block-coblocks-row__inner{
-				order:1;
-			}
-		}
-	}
-
-
-
-
 .wp-block-coblocks-media-card {
 	&__wrapper {
 		align-items: center;
@@ -201,6 +177,28 @@
 						margin-bottom: 0;
 					}
 				}
+			}
+		}
+	}
+}
+
+// IE 10+ Support
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+	.wp-block-coblocks-media-card {
+		.wp-block-coblocks-media-card__wrapper {
+			display: flex;
+
+			.wp-block-coblocks-row__inner {
+				flex-grow: 1;
+			}
+		}
+
+		&.is-style-right {
+			figure {
+				order: 2;
+			}
+			.wp-block-coblocks-row__inner {
+				order: 1;
 			}
 		}
 	}
