Add IE11 support to the Media Card block (#692)
* match style of Media Card in IE11

* add styles for editor left-side media block

* make media-card editable in IE11

* Switch to using flex and order for page view

* width is being set from core. working on override for ie11

* Use @media all and (-ms-high-contrast: none), (-ms-high-contrast: active)

--- a/src/blocks/media-card/styles/style.scss
+++ b/src/blocks/media-card/styles/style.scss
@@ -181,3 +181,25 @@
 		}
 	}
 }
+
+// IE 10+ Support
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+	.wp-block-coblocks-media-card {
+		.wp-block-coblocks-media-card__wrapper {
+			display: flex;
+
+			.wp-block-coblocks-row__inner {
+				flex-grow: 1;
+			}
+		}
+
+		&.is-style-right {
+			figure {
+				order: 2;
+			}
+			.wp-block-coblocks-row__inner {
+				order: 1;
+			}
+		}
+	}
+}
