--- a/src/blocks/services/service/styles/editor.scss
+++ b/src/blocks/services/service/styles/editor.scss
@@ -2,6 +2,11 @@
 	flex: 1 100%;
 	max-width: 100%;
 
+	> .editor-block-list__block-edit {
+		margin-bottom: 0;
+		margin-top: 0;
+	}
+
 	.editor-block-mover {
 		display: none;
 	}
@@ -10,6 +15,10 @@
 .wp-block-coblocks-service {
 	display: block;
 	flex: 1 100%;
+
+	.block-editor-block-list__block .block-editor-block-list__block-edit {
+		margin-bottom: 0;
+	}
 
 	.editor-media-placeholder {
 		margin: 0 0 1.65em !important;
