Tweak styling for gutenberg

--- a/src/blocks/services/service/styles/editor.scss
+++ b/src/blocks/services/service/styles/editor.scss
@@ -10,6 +10,10 @@
 	.editor-block-mover {
 		display: none;
 	}
+
+	.rich-text:last-of-type {
+		margin-bottom: 0;
+	}
 }
 
 .wp-block-coblocks-service {
