replace missing style for label

--- a/src/components/dimensions-control/styles/editor.scss
+++ b/src/components/dimensions-control/styles/editor.scss
@@ -66,6 +66,10 @@
 			margin-bottom: 1.5em;
 		}
 
+		.components-base-control__label {
+			margin-bottom: 5px;
+		}
+		
 		.components-base-control__help {
 			margin-top: -5px;
 		}
