add css to correctly adjust padding for CoBlocks custom style buttons

--- a/src/blocks/services/styles/editor.scss
+++ b/src/blocks/services/styles/editor.scss
@@ -18,6 +18,10 @@ $gutter: 0.3em;
 			transform: translateX(8px);
 		}
 	}
+
+	.block-editor-block-styles__item-preview {
+		padding: 12% 0px 12% 0px;
+	}
 }
 
 .wp-block[data-type="coblocks/services"] {
