--- a/src/blocks/services/styles/editor.scss
+++ b/src/blocks/services/styles/editor.scss
@@ -1,38 +1,26 @@
 $gutter: 0.3em;
 
 .coblocks-editor-block-styles {
-	& .align-center {
+	.align-center {
 		.service-svg-moving-path {
 			transform: translateX(4px);
 		}
 	}
 
-	& .align-left {
+	.align-left {
 		.service-svg-moving-path {
 			transform: translateX(0);
 		}
 	}
 
-	& .align-right {
+	.align-right {
 		.service-svg-moving-path {
 			transform: translateX(8px);
 		}
 	}
 }
 
-.wp-block[data-type="coblocks/services"] {
-	[data-block] {
-		margin-bottom: 0;
-		margin-top: 0;
-	}
-}
-
 .wp-block-coblocks-services {
-	[data-block] {
-		margin-bottom: 0;
-		margin-top: 0;
-	}
-
 	[data-align="full"] & {
 		padding-left: $gutter * 6;
 		padding-right: $gutter * 6;
@@ -71,7 +59,7 @@ $gutter: 0.3em;
 		&[data-columns="4"] .wp-block[data-type="coblocks/service"] {
 			flex-basis: 50%;
 			margin-bottom: 3em;
-			max-width: calc(100% / 2 - #{$gutter});
+			max-width: calc(100% / 2);
 
 			&:nth-child(1),
 			&:nth-child(3) {
@@ -105,4 +93,46 @@ $gutter: 0.3em;
 
 .components-toggle-control--services-action-button {
 	margin-top: 40px;
+}
+
+// Added for Gutenberg 6.3
+.block-editor-block-list__block[data-type="coblocks/service"].has-child-selected .wp-block-coblocks-service__content .block-editor-block-list__block-edit {
+	margin-left: -24px;
+	margin-right: -27px;
+}
+
+.block-editor-block-list__block[data-type="coblocks/service"].has-child-selected > .block-editor-block-list__block-edit .wp-block-coblocks-service::before,
+.block-editor-block-list__block[data-type="coblocks/service"].is-selected > .block-editor-block-list__block-edit .wp-block-coblocks-service::before {
+	border: 1px dashed rgba(123, 134, 162, 0.3);
+	bottom: 0;
+	box-shadow: none;
+	content: "";
+	left: -2px;
+	outline: 1px solid transparent;
+	pointer-events: none;
+	position: absolute;
+	right: -2px;
+	top: 0;
+	transition: border-color 0.1s linear, border-style 0.1s linear, box-shadow 0.1s linear;
+	z-index: 0;
+}
+
+.block-editor-block-list__layout .block-editor-block-list__block[data-type="coblocks/service"].has-child-selected .wp-block-coblocks-service,
+.block-editor-block-list__layout .block-editor-block-list__block[data-type="coblocks/service"].is-selected .wp-block-coblocks-service {
+	padding: 0 14px;
+}
+
+.block-editor-block-list__block[data-type="coblocks/service"].has-child-selected > .block-editor-block-list__block-edit > [data-block] > div,
+.block-editor-block-list__block[data-type="coblocks/service"].is-selected > .block-editor-block-list__block-edit > [data-block] > div,
+.block-editor-block-list__block[data-type="coblocks/services"].has-child-selected
+	> .block-editor-block-list__block-edit
+	> [data-block]
+	> div
+	> .block-editor-inner-blocks,
+.block-editor-block-list__block[data-type="coblocks/services"].is-selected
+	> .block-editor-block-list__block-edit
+	> [data-block]
+	> div
+	> .block-editor-inner-blocks {
+	padding: 14px 10px;
 }
