--- a/src/blocks/services/service/styles/editor.scss
+++ b/src/blocks/services/service/styles/editor.scss
@@ -3,6 +3,9 @@
 	max-width: 100%;
 
 	> .editor-block-list__block-edit {
+		margin-bottom: 0;
+		margin-top: 0;
+
 		> [data-block] {
 			margin-bottom: 0;
 			margin-top: 0;
