--- a/src/blocks/features/styles/editor.scss
+++ b/src/blocks/features/styles/editor.scss
@@ -10,9 +10,12 @@
 
 		&__inner {
 			> .editor-inner-blocks {
+				width: 100%;
+
 				> .editor-block-list__layout {
 					@media (min-width: 600px) {
 						display: flex;
+						width: 100%;
 					}
 
 					> .wp-block > .editor-block-list__block-edit {
@@ -199,12 +202,9 @@
 		@media (min-width: 600px) {
 			display: flex;
 			flex-direction: column;
-
-			// Prevent the columns from growing wider than their distributed sizes.
 			min-width: 0;
-
-			// Prevent long unbroken words from overflowing.
 			overflow-wrap: break-word;
+			width: 100%;
 			word-break: break-word;
 		}
 
