--- a/src/blocks/features/styles/editor.scss
+++ b/src/blocks/features/styles/editor.scss
@@ -45,13 +45,13 @@
 			}
 
 			// Hide first mover.
-			[data-type="coblocks/feature"] {
-				.wp-block:first-child {
-					.editor-block-mover {
-						display: none !important;
-					}
-				}
-			}
+			// [data-type="coblocks/feature"] {
+			// 	.wp-block:first-child {
+			// 		.editor-block-mover {
+			// 			display: none !important;
+			// 		}
+			// 	}
+			// }
 
 			// Fixes single feature full width issue.
 			&.has-1-columns {
