--- a/src/blocks/share/styles/editor.scss
+++ b/src/blocks/share/styles/editor.scss
@@ -25,7 +25,7 @@
 		&.is-style-text,
 		&.is-style-icon-and-text {
 			.wp-block-coblocks-social__button {
-				width: 75%;
+				width: 95%;
 			}
 		}
 
@@ -70,6 +70,10 @@
 			padding-left: 10px;
 			padding-right: 10px;
 			width: 100%;
+
+			&.is-empty {
+				opacity: 1 !important;
+			}
 		}
 	}
 
@@ -110,4 +114,9 @@
 	.components-base-control {
 		margin-bottom: 8px;
 	}
+}
+
+// Shim to get buttons to display correctly in G 6.3+ only.
+.block-editor-block-preview__container .wp-block-coblocks-social__button {
+	transform: scale(4.4);
 }
