Don't allow background color to show in the preview

--- a/src/blocks/share/styles/editor.scss
+++ b/src/blocks/share/styles/editor.scss
@@ -8,6 +8,7 @@
 
 .block-editor-block-preview__content {
 	.wp-block-coblocks-social {
+		background: transparent !important;
 		align-content: center;
 		align-items: center;
 		display: flex;
