--- a/src/blocks/alert/styles/style.scss
+++ b/src/blocks/alert/styles/style.scss
@@ -5,19 +5,32 @@
 	padding: 1.1em 1.3em 1em;
 	position: relative;
 
-	&.is-style-warning {
-		background-color: #fbe7dd;
-		color: #8a4b30;
+	&:not(.has-background) {
+		&.is-style-warning {
+			background-color: #fbe7dd;
+		}
+
+		&.is-style-error {
+			background-color: #ffdede;
+		}
+
+		&.is-style-success {
+			background-color: #d0eac4;
+		}
 	}
 
-	&.is-style-error {
-		background-color: #ffdede;
-		color: #8b343c;
-	}
+	&:not(.has-text-color) {
+		&.is-style-warning {
+			color: #8a4b30;
+		}
 
-	&.is-style-success {
-		background-color: #d0eac4;
-		color: #154a28;
+		&.is-style-error {
+			color: #8b343c;
+		}
+
+		&.is-style-success {
+			color: #154a28;
+		}
 	}
 
 	&__title {
