--- a/src/blocks/social-profiles/styles/editor.scss
+++ b/src/blocks/social-profiles/styles/editor.scss
@@ -23,6 +23,13 @@
 }
 
 .block-library-button__inline-link--coblocks {
+	align-items: center;
+	background: #fff;
+	display: flex;
+	flex-wrap: wrap;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	font-size: 13px;
+	line-height: 1.4;
 	margin-bottom: 0;
 	margin-top: 0;
 	width: 338px;
