change icon size selctor from button with popout to a select element

--- a/src/blocks/icon/styles/editor.scss
+++ b/src/blocks/icon/styles/editor.scss
@@ -184,3 +184,10 @@
 		margin-top: 3px;
 	}
 }
+
+// Hide screen reader label for Gutenberg < 6.4
+.components-base-control {
+	.components-base-control .components-base-control__label {
+		display: none;
+	}
+}
