--- a/src/blocks/accordion/accordion-item/styles/editor.scss
+++ b/src/blocks/accordion/accordion-item/styles/editor.scss
@@ -1,4 +1,8 @@
 .wp-block-coblocks-accordion-item {
+	p {
+		margin-top: 0;
+	}
+
 	// Remove hover and focus, as the title is now a text field.
 	&__title {
 		&::after {
@@ -14,12 +18,87 @@
 		border-radius: $accordion-border-radius $accordion-border-radius 0 0;
 	}
 
-	// Set proper margin for the first and last item within the accordion item.
-	.wp-block:first-of-type .editor-block-list__block-edit {
-		margin-top: 4px;
-	}
+	// // Set proper margin for the first and last item within the accordion item.
+	// .wp-block:first-of-type .editor-block-list__block-edit {
+	// 	margin-top: 4px;
+	// }
 
-	.wp-block:nth-last-child(2) .editor-block-list__block-edit {
-		margin-bottom: 4px;
+	// .wp-block:nth-last-child(2) .editor-block-list__block-edit {
+	// 	margin-bottom: 4px;
+	// }
+
+	.wp-block:first-child [data-block] {
+		margin-top: 0;
 	}
+	.wp-block:nth-last-child(2) [data-block] {
+		margin-bottom: 0;
+	}
+}
+
+// margin-top: 0 !important;
+// &:not(:last-child) {
+// 	margin-bottom: -15px !important;
+// }
+// .editor-block-list__insertion-point {
+// 	display: none;
+// }
+// .wp-block:first-child [data-block] {
+// 	margin-top: 0;
+// }
+// .wp-block:nth-last-child(2) [data-block] {
+// 	margin-bottom: 0;
+// };
+
+.wp-block-coblocks-accordion
+	> .editor-inner-blocks
+	> .editor-block-list__layout
+	> [data-type="coblocks/accordion-item"]
+	> .editor-block-list__block-edit
+	> [data-block] {
+	margin-top: 0;
+}
+
+.block-editor-block-list__layout
+	.block-editor-block-list__block[data-type="coblocks/accordion-item"].has-child-selected
+	> .block-editor-block-list__block-edit
+	> [data-block]
+	> div
+	> .block-editor-inner-blocks,
+.block-editor-block-list__layout
+	.block-editor-block-list__block[data-type="coblocks/accordion-item"].is-selected
+	> .block-editor-block-list__block-edit
+	> [data-block]
+	> div
+	> .block-editor-inner-blocks,
+.block-editor-block-list__layout
+	.block-editor-block-list__block[data-type="coblocks/accordion"].has-child-selected
+	> .block-editor-block-list__block-edit
+	> [data-block]
+	> div
+	> .block-editor-inner-blocks,
+.block-editor-block-list__layout
+	.block-editor-block-list__block[data-type="coblocks/accordion"].is-selected
+	> .block-editor-block-list__block-edit
+	> [data-block]
+	> div
+	> .block-editor-inner-blocks {
+	padding: 14px 14px 0;
+}
+
+.has-child-selected
+	.wp-block-coblocks-accordion
+	> .editor-inner-blocks
+	> .editor-block-list__layout
+	> [data-type="coblocks/accordion-item"]
+	> .editor-block-list__block-edit
+	> [data-block],
+.is-selected
+	.wp-block-coblocks-accordion
+	> .editor-inner-blocks
+	> .editor-block-list__layout
+	> [data-type="coblocks/accordion-item"]
+	> .editor-block-list__block-edit
+	> [data-block] {
+	margin-bottom: 42px;
+	margin-top: 0;
 }
