--- a/src/blocks/gallery-stacked/styles/editor.scss
+++ b/src/blocks/gallery-stacked/styles/editor.scss
@@ -1,4 +1,11 @@
 .editor-block-list__block[data-type="coblocks/gallery-stacked"] {
+	&[data-align="left"],
+	&[data-align="right"] {
+		.wp-block-coblocks-gallery-stacked {
+			max-width: 305px;
+		}
+	}
+
 	// Fix issue where selected images are not wider than the viewport.
 	.coblocks-gallery--item:not(.is-appender) .coblocks-gallery--figure {
 		display: inline-block;
