--- a/src/blocks/food-and-drinks/food-item/styles/editor.scss
+++ b/src/blocks/food-and-drinks/food-item/styles/editor.scss
@@ -87,7 +87,7 @@
 
 	&__attribute.components-icon-button {
 		border: 0;
-		border-radius: 0;
+		border-radius: 2px;
 		box-shadow: none;
 		color: inherit;
 		font-size: inherit;
@@ -105,6 +105,10 @@
 
 		&:not(.is-toggled) {
 			opacity: 0.55;
+		}
+
+		&:focus {
+			box-shadow: 0 0 0 2px $white, 0 0 0 3px $dark-gray-500;
 		}
 	}
 }
