--- a/src/blocks/features/styles/editor.scss
+++ b/src/blocks/features/styles/editor.scss
@@ -10,6 +10,8 @@
 
 		&__inner {
 			> .editor-inner-blocks {
+				width: 100%;
+
 				> .editor-block-list__layout {
 					@media (min-width: 600px) {
 						display: flex;
@@ -39,15 +41,6 @@
 
 			p {
 				color: inherit !important;
-			}
-
-			// Hide first mover.
-			[data-type="coblocks/feature"] {
-				.wp-block:first-child {
-					.editor-block-mover {
-						display: none !important;
-					}
-				}
 			}
 
 			// Fixes single feature full width issue.
@@ -199,12 +192,9 @@
 		@media (min-width: 600px) {
 			display: flex;
 			flex-direction: column;
-
-			// Prevent the columns from growing wider than their distributed sizes.
 			min-width: 0;
-
-			// Prevent long unbroken words from overflowing.
 			overflow-wrap: break-word;
+			width: 100%;
 			word-break: break-word;
 		}
 
