--- a/src/blocks/author/styles/editor.scss
+++ b/src/blocks/author/styles/editor.scss
@@ -41,7 +41,7 @@
 
 			svg {
 				fill: #444;
-				margin: 0 auto;
+				margin: auto auto;
 				pointer-events: none;
 				transform: translate3d(0, 0, 0);
 				transition: transform 100ms cubic-bezier(0.645, 0.045, 0.355, 1);
