--- a/src/blocks/author/styles/editor.scss
+++ b/src/blocks/author/styles/editor.scss
@@ -6,9 +6,15 @@
 		}
 	}
 
-	.wp-block[data-type="core/button"] .block-editor-block-list__block-edit::before {
-		border: none;
-		box-shadow: none;
+	.wp-block[data-type="core/button"] {
+		[data-block] {
+			margin-bottom: 0;
+		}
+
+		.block-editor-block-list__block-edit::before {
+			border: none;
+			box-shadow: none;
+		}
 	}
 
 	// Show the inline button control only when editing the button block.
