--- a/src/blocks/author/styles/editor.scss
+++ b/src/blocks/author/styles/editor.scss
@@ -51,7 +51,7 @@
 	}
 }
 
-// Shim to make the avatar 100% opacity in the previewer.
+// Shim to fix styles in the previewer.
 .block-editor-inserter__preview-content .wp-block-coblocks-author {
 	.components-button {
 		opacity: 1;
