--- a/src/blocks/features/styles/editor.scss
+++ b/src/blocks/features/styles/editor.scss
@@ -259,3 +259,9 @@
 		margin-bottom: 0 !important;
 	}
 }
+
+// Shim to fix styles in the previewer.
+.block-editor-inserter__preview-content .wp-block-coblocks-features {
+	padding-left: 30px;
+	padding-right: 30px;
+}
