--- a/src/blocks/shape-divider/styles/editor.scss
+++ b/src/blocks/shape-divider/styles/editor.scss
@@ -169,3 +169,10 @@
 		}
 	}
 }
+
+.block-editor-inserter__preview-content {
+	.wp-block-coblocks-shape-divider__alt-wrapper {
+		margin-top: -1px;
+	}
+}
+
