--- a/src/blocks/gallery-masonry/styles/editor.scss
+++ b/src/blocks/gallery-masonry/styles/editor.scss
@@ -90,10 +90,9 @@
 	}
 }
 
-.block-editor-inserter__preview-content {
-	.wp-block-coblocks-gallery-masonry {
-		.coblocks-gallery--item:last-child {
-			display: none;
-		}
+// Shim to fix styles in the previewer.
+.block-editor-inserter__preview-content .wp-block-coblocks-gallery-masonry {
+	.coblocks-gallery--item:last-child {
+		display: none;
 	}
 }
