--- a/src/blocks/shape-divider/styles/editor.scss
+++ b/src/blocks/shape-divider/styles/editor.scss
@@ -170,7 +170,8 @@
 	}
 }
 
-.block-editor-inserter__preview-content {
+// Shim to fix styles in the previewer.
+.block-editor-inserter__preview-content .wp-block-coblocks-shape-divider {
 	.wp-block-coblocks-shape-divider__alt-wrapper {
 		margin-top: -1px;
 	}
