--- a/src/blocks/services/styles/editor.scss
+++ b/src/blocks/services/styles/editor.scss
@@ -100,7 +100,7 @@ $gutter: 0.3em;
 	margin-top: 40px;
 }
 
-// Added for Gutenberg 6.3
+// Added for Gutenberg 6.3+
 .block-editor-block-list__block[data-type="coblocks/service"].has-child-selected .wp-block-coblocks-service__content .block-editor-block-list__block-edit {
 	margin-left: -24px;
 	margin-right: -27px;
