--- a/src/blocks/form/styles/editor.scss
+++ b/src/blocks/form/styles/editor.scss
@@ -46,8 +46,7 @@
 
 	.coblocks-field {
 		input,
-		textarea,
-		[data-block] {
+		textarea {
 			margin-bottom: 0;
 		}
 
@@ -134,4 +133,35 @@
 	.coblocks-form__submit.wp-block-button {
 		margin-top: 0;
 	}
+}
+
+// Added for Gutenberg 6.3+
+.block-editor-block-list__layout .block-editor-block-list__block[data-type="coblocks/form"].is-selected,
+.block-editor-block-list__layout .block-editor-block-list__block[data-type="coblocks/form"].has-child-selected {
+	.coblocks-form {
+		[data-block] {
+			margin-bottom: 42px;
+		}
+	}
+}
+
+.block-editor-block-list__layout .block-editor-block-list__block[data-type="coblocks/form"] .wp-block:first-child {
+	[data-block] {
+		margin-top: 2px;
+	}
+}
+
+.block-editor-block-list__layout
+	.block-editor-block-list__block[data-type="coblocks/form"].has-child-selected
+	> .block-editor-block-list__block-edit
+	> [data-block]
+	> div
+	.editor-inner-blocks,
+.block-editor-block-list__block[data-type="coblocks/form"].is-selected
+	> .block-editor-block-list__block-edit
+	> [data-block]
+	> div
+	> .block-editor-inner-blocks {
+	padding: 14px;
+	padding-bottom: 0;
 }
