Specificity audit: Alert/Accordion block (#795)
* Clean up mixins

* Audit accordion/accordion item

* Audit Alert block

* Clean up excess styling for the Alert block

* Set PanelColorSettings to false (Alert)

* Update index.js

* Nested accordion tweaks

* Clean up styling

* remove reference to editor.scss from alert block

--- a/src/blocks/alert/styles/style.scss
+++ b/src/blocks/alert/styles/style.scss
@@ -1,9 +1,8 @@
 .wp-block-coblocks-alert {
 	background-color: #d6efee;
-	border-radius: 0.25rem;
+	border-radius: 3px;
 	color: #094264;
-	padding: 1.1em 1.3em 1em;
-	position: relative;
+	padding: 2em;
 
 	&:not(.has-background) {
 		&.is-style-warning {
@@ -34,11 +33,9 @@
 	}
 
 	&__title {
-		color: inherit;
-		display: inline-block;
-		line-height: 1;
-		margin-bottom: 0.75em;
-		width: 100%;
+		display: block;
+		margin-bottom: 0.5em;
+		margin-top: 0;
 
 		&:empty {
 			display: none;
@@ -46,7 +43,7 @@
 	}
 
 	&__text {
-		color: inherit;
 		margin-bottom: 0;
+		margin-top: 0;
 	}
 }
