Small style tweaks to better center icons

--- a/src/components/responsive-tabs-control/styles/editor.scss
+++ b/src/components/responsive-tabs-control/styles/editor.scss
@@ -89,11 +89,15 @@
 
 		svg {
 			height: 15px;
-			position: relative;
-			top: 0.08em;
-			width: 15px;
 			margin: auto;
+			position: relative;
+			top: 0.03em;
+			width: 15px;
 		}
+	}
+
+	&-item--mobile svg {
+		top: 0.05em;
 	}
 
 	.components-tab-panel__tabs {
