Add example block content  (#810)
* Alert

* Update Alert

* Author

* Click to Tweet

* Dynamic Sep

* Icon

* Social Profiles

* Share

* Masonry

* Fix Masonry

* Update Share/Social

* Tweak author

* Pricing

* Highlight

* Stacked

* Carousel

* Author

* Map

* Update Stacked

* Rename gallery images

* Logos

* Features

* Services

* Shape Divider

* Tweak comments

* Update Form

* Media Card

* Linting

--- a/src/blocks/share/styles/editor.scss
+++ b/src/blocks/share/styles/editor.scss
@@ -6,11 +6,11 @@
 	}
 }
 
-.block-editor-block-preview__content {
+.block-editor-block-styles {
 	.wp-block-coblocks-social {
-		background: transparent !important;
 		align-content: center;
 		align-items: center;
+		background: transparent !important;
 		display: flex;
 		height: 100%;
 		justify-content: center;
@@ -127,6 +127,6 @@
 }
 
 // Shim to get buttons to display correctly in G 6.3+ only.
-.block-editor-block-preview__container .wp-block-coblocks-social__button {
+.components-panel__body .block-editor-block-preview__container .wp-block-coblocks-social__button {
 	transform: scale(4.2);
 }
