--- a/src/blocks/features/styles/editor.scss
+++ b/src/blocks/features/styles/editor.scss
@@ -2,7 +2,7 @@
 	background: transparent !important;
 
 	.block-list-appender {
-		display: none;
+		display: none !important;
 	}
 
 	.wp-block-coblocks-features {
@@ -22,25 +22,6 @@
 						margin-top: 0;
 					}
 				}
-			}
-
-			// Fix color for headings.
-			p,
-			.wp-block-heading {
-				padding-top: 0 !important;
-
-				h1,
-				h2,
-				h3,
-				h4,
-				h5,
-				h6 {
-					color: inherit !important;
-				}
-			}
-
-			p {
-				color: inherit !important;
 			}
 
 			// Fixes single feature full width issue.
@@ -183,11 +164,6 @@
 		}
 	}
 
-	> .editor-block-mover,
-	> .block-list-appender {
-		display: none;
-	}
-
 	.wp-block[data-type="coblocks/feature"] {
 		@media (min-width: 600px) {
 			display: flex;
@@ -196,11 +172,6 @@
 			overflow-wrap: break-word;
 			width: 100%;
 			word-break: break-word;
-		}
-
-		[data-block] {
-			margin-bottom: 0;
-			margin-top: 0;
 		}
 
 		.editor-default-block-appender {
@@ -238,14 +209,10 @@
 							margin-bottom: 0;
 							margin-top: 0;
 						}
-
-						&[data-type="core/paragraph"] {
-							margin-top: 0 !important;
-						}
 					}
 					> div {
 						> .editor-default-block-appender {
-							display: none;
+							display: none !important;
 						}
 					}
 				}
@@ -258,6 +225,33 @@
 	.components-range-control {
 		margin-bottom: 0 !important;
 	}
+}
+
+// Added for Gutenberg 6.3+
+.block-editor-block-list__block[data-type="coblocks/feature"] .wp-block:first-child {
+	[data-block] {
+		margin-top: 0;
+	}
+}
+
+.block-editor-block-list__block[data-type="coblocks/feature"] .wp-block:nth-last-child(2) {
+	[data-block] {
+		margin-bottom: 0;
+	}
+}
+
+.block-editor-block-list__block[data-type="coblocks/features"].is-selected
+	[data-type="coblocks/feature"]:not(.is-selected)
+	> .block-editor-block-list__block-edit::before,
+.block-editor-block-list__block[data-type="coblocks/features"].has-child-selected
+	[data-type="coblocks/feature"]:not(.is-selected)
+	> .block-editor-block-list__block-edit::before {
+	border: 1px dashed rgba(123, 134, 162, 0.3);
+}
+
+.block-editor-block-list__block[data-type="coblocks/features"].has-child-selected .wp-block-coblocks-features,
+.block-editor-block-list__block[data-type="coblocks/features"].is-selected .wp-block-coblocks-features {
+	padding: 14px;
 }
 
 // Shim to fix styles in the previewer.
