--- a/src/blocks/gallery-carousel/styles/editor.scss
+++ b/src/blocks/gallery-carousel/styles/editor.scss
@@ -1,56 +1,76 @@
 .editor-block-list__block[data-type="coblocks/gallery-carousel"] {
-	// Fix fullwidth alignment bug where gutters would not display.
-	&.editor-block-list__block[data-align="full"] > .editor-block-list__block-edit figure {
-		width: auto;
-	}
+  // Fix fullwidth alignment bug where gutters would not display.
+  &.editor-block-list__block[data-align="full"] > .editor-block-list__block-edit figure {
+    width: auto;
+  }
 
-	// Fixes issue where the outline does not fully render due to the outside nature of the core outline style applied.
-	.is-appender {
-		border: 1px dashed $dark-gray-150;
-		height: 100%;
-		margin-bottom: 0;
-		outline: none;
-		width: 100%;
+  // Fixes issue where the outline does not fully render due to the outside nature of the core outline style applied.
+  .is-appender {
+    border: 1px dashed $dark-gray-150;
+    height: 100%;
+    margin-bottom: 0;
+    outline: none;
+    width: 100%;
 
-		&:hover {
-			border-color: $dark-gray-500;
-		}
-	}
+    &:hover {
+      border-color: $dark-gray-500;
+    }
+  }
 
-	// Set the appender to full height (second is the pre Gutenberg 5.6 method).
-	.coblocks-gallery--figure .components-form-file-upload,
-	.components-coblocks-gallery-uploader-wrapper {
-		height: 100%;
-	}
+  // Set the appender to full height (second is the pre Gutenberg 5.6 method).
+  .coblocks-gallery--figure .components-form-file-upload,
+  .components-coblocks-gallery-uploader-wrapper {
+    height: 100%;
+  }
 
-	.components-coblocks-gallery-uploader {
-		border: 1px dashed $dark-gray-150;
-		height: 100%;
-		margin-bottom: 0;
-		outline: none;
-		width: 100%;
+  .components-coblocks-gallery-uploader {
+    border: 1px dashed $dark-gray-150;
+    height: 100%;
+    margin-bottom: 0;
+    outline: none;
+    width: 100%;
 
-		&:hover {
-			border-color: $dark-gray-500;
-		}
-	}
+    &:hover {
+      border-color: $dark-gray-500;
+    }
+  }
 
-	// Fixes issue with multiple dropzones displaying when dropping in an image.
-	.components-drop-zone.is-active {
-		+ .wp-block-coblocks-gallery-carousel div div div div div:last-child .components-drop-zone {
-			display: none;
-		}
-	}
+  // Fixes issue with multiple dropzones displaying when dropping in an image.
+  .components-drop-zone.is-active {
+    + .wp-block-coblocks-gallery-carousel div div div div div:last-child .components-drop-zone {
+      display: none;
+    }
+  }
 
-	.flickity-enabled {
-		height: 100% !important;
-		position: inherit;
-	}
+  .flickity-enabled {
+    height: 100% !important;
+    position: inherit;
+  }
+
+  .carousel-nav {
+
+    .blockgallery--item-thumbnail {
+      opacity: 0.4;
+    }
+
+    .blockgallery--item-thumbnail:first-of-type {
+      opacity: 1;
+    }
+  }
+
+  .wp-block-blockgallery-thumbnails {
+    overflow: visible;
+  }
+}
+
+.blockgallery--figure {
+  margin-left: 3px;
+  margin-right: 3px;
 }
 
 // Shim to fix styles in the previewer.
 .block-editor-inserter__preview-content .wp-block-coblocks-gallery-carousel {
-	.flickity-button:disabled {
-		opacity: 1;
-	}
+  .flickity-button:disabled {
+    opacity: 1;
+  }
 }
