--- a/src/extensions/image-styles/styles/style.scss
+++ b/src/extensions/image-styles/styles/style.scss
@@ -2,6 +2,12 @@
 	overflow: hidden;
 	position: relative;
 
+	// IE 10+ Support
+	// @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+	// 	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' style='fill:red; stroke:none' %3E%3Crect x='0' y='40' width='100' height='20' /%3E%3Crect x='40' y='0' width='20' height='100' /%3E%3C/svg%3E");				color: transparent !important;
+	// 	z-index: 2;
+	// }
+
 	img {
 		vertical-align: bottom;
 	}
