--- a/src/blocks/gallery-masonry/styles/style.scss
+++ b/src/blocks/gallery-masonry/styles/style.scss
@@ -26,20 +26,9 @@
 			}
 
 			&:hover {
+				cursor: pointer;
 				position: relative;
 				transition: all .5s ease 0s;
-
-				&::before {
-					content: "";
-					position: absolute;
-					top: 0;
-					left: 0;
-					width: 100%;
-					height: 100%;
-					background-color: rgba(255, 255, 255, 0.1);
-					transition: all .5s ease 0s;
-					z-index: 2;
-				}
 
 				img {
 					transform: scale(1.1);
