Fix display bug for images within Features block.

--- a/src/blocks/features/styles/style.scss
+++ b/src/blocks/features/styles/style.scss
@@ -88,6 +88,10 @@
 	}
 
 	.wp-block-coblocks-feature__inner {
+		img {
+			display: inline !important;
+		}
+
 		// Add padding so the feature does not run into the viewport edge on mobile.
 		&.has-no-padding {
 			padding: 0 10px;
