--- a/src/extensions/advanced-image/styles/editor.scss
+++ b/src/extensions/advanced-image/styles/editor.scss
@@ -1,15 +1,9 @@
 .wp-block[data-type="core/image"] .block-editor-block-list__block-edit {
-  .cb-image-is-cropping div.components-resizable-box__container::after {
-    content: 'Cropping...';
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, .7);
-    color: white;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+	figure {
+		transition: opacity 0.1s linear;
+	}
+
+	.cb-image-is-cropping {
+		opacity: 0.3;
+	}
 }
