--- a/src/blocks/gallery-masonry/styles/style.scss
+++ b/src/blocks/gallery-masonry/styles/style.scss
@@ -18,25 +18,6 @@
 		vertical-align: bottom;
 	}
 
-	.expandable-image {
-		.coblocks-gallery--figure {
-
-			img {
-				transition: transform .5s ease 0s;
-			}
-
-			&:hover {
-				cursor: pointer;
-				position: relative;
-				transition: all .5s ease 0s;
-
-				img {
-					transform: scale(1.1);
-				}
-			}
-		}
-	}
-
 	figcaption {
 		background: linear-gradient(0deg, rgba($color: $black, $alpha: 0.7) 0, rgba($color: $black, $alpha: 0.3) 50%, transparent);
 		bottom: 0;
@@ -51,6 +32,14 @@
 
 		img {
 			display: inline;
+		}
+	}
+}
+
+.has-lightbox {
+	.coblocks-gallery--figure {
+		&:hover {
+			cursor: zoom-in;
 		}
 	}
 }
