--- a/src/components/block-gallery/styles/style/_masonry-modal.scss
+++ b/src/components/block-gallery/styles/style/_masonry-modal.scss
@@ -1,97 +1,127 @@
 .masonry-modal-wrapper {
-  display: none;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 9999;
-  background: rgba(0, 0, 0, 0.7);
+	align-items: center;
+	background: rgba(0, 0, 0, 0);
+	display: none;
+	height: 100%;
+	justify-content: center;
+	left: 0;
+	position: fixed;
+	top: 0;
+	width: 100%;
+	z-index: 9999;
 
-  .masonry-modal-wrapper__background {
-    position: absolute;
-    top: -50px;
-    left: -50px;
-    right: -50px;
-    bottom: -50px;
-    background-size: cover;
-    filter: blur(40px) brightness(50%);
-    transition: all 250ms ease-in-out 0s;
-  }
+	.admin-bar & {
+		top: 32px;
 
-  .masonry-modal-wrapper__heading {
-    position: absolute;
-    width: 76%;
-    left: 50%;
-    top: 48px;
-    transform: translateX(-50%);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: #fff;
-  }
+		@media (max-width: 782px) {
+			top: 46px;
+		}
+	}
+}
 
-  .masonry-modal-wrapper__image-container {
-    z-index: 2;
+.masonry-modal-wrapper__background {
+	background-repeat: no-repeat;
+	background-size: cover;
+	bottom: -2em;
+	filter: blur(20px) saturate(150%) brightness(75%);
+	left: -2em;
+	position: absolute;
+	right: -2em;
+	top: -2em;
+}
 
-    img {
-      max-width: 70vw;
-      max-height: 70vh;
-    }
-  }
+.masonry-modal-wrapper__heading {
+	align-items: center;
+	color: $white;
+	display: flex;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue";
+	font-size: 0.5em;
+	justify-content: space-between;
+	left: 3%;
+	position: absolute;
+	right: 3%;
+	top: 1%;
 
-  .masonry-modal-wrapper--arrow-right-container {
-    position: absolute;
-    top: 50%;
-    right: 0;
-    transform: translateY(-50%);
-    padding: 40px;
-    margin: 0 3%;
-    border-radius: 50%;
-    background-color: rgba(22, 22, 22, 0.5);
-    color: #fff;
-    cursor: pointer;
-  }
+	@include break-small() {
+		top: 2%;
+	}
+}
 
-  .masonry-modal-wrapper--arrow-left-container {
-    position: absolute;
-    top: 50%;
-    left: 0;
-    transform: translateY(-50%);
-    padding: 40px;
-    margin: 0 3%;
-    border-radius: 50%;
-    background-color: rgba(22, 22, 22, 0.5);
-    color: #fff;
-    cursor: pointer;
-  }
+.masonry-modal-wrapper__image-container {
+	z-index: 2;
 
-  .arrow-left {
-    width: 24px;
-    height: 24px;
-    background-color: #fff;
-    -webkit-mask-image: url(images/masonry-modal/arrow-left.svg);
-    mask-image: url(images/masonry-modal/arrow-left.svg);
-  }
+	img {
+		max-height: 70vh;
+		max-width: 70vw;
 
-  .arrow-right {
-    width: 24px;
-    height: 24px;
-    background-color: #fff;
-    -webkit-mask-image: url(images/masonry-modal/arrow-right.svg);
-    mask-image: url(images/masonry-modal/arrow-right.svg);
-  }
+		@include break-large() {
+			max-height: 80vh;
+			max-width: 80vw;
+		}
+	}
+}
 
-  .masonry-modal-wrapper--close {
-    cursor: pointer;
-    width: 16px;
-    height: 16px;
-    background-color: #fff;
-    -webkit-mask-image: url(images/masonry-modal/close.svg);
-    mask-image: url(images/masonry-modal/close.svg);
-    -webkit-mask-size: contain;
-    mask-size: contain;
-  }
+.masonry-modal-wrapper--arrow-right-container,
+.masonry-modal-wrapper--arrow-left-container {
+	align-items: center;
+	border-radius: 100%;
+	color: $white;
+	cursor: pointer;
+	display: flex;
+	height: auto;
+	margin: 0 1%;
+	padding: 0.7em;
+	position: absolute;
+	right: 0;
+	top: 50%;
+	transform: translateY(-50%);
+	transition: 250ms background-color linear;
+	z-index: 3;
+
+	&:hover {
+		background-color: rgba(255, 255, 255, 0.1);
+	}
+
+	@include break-small() {
+		background-color: rgba(255, 255, 255, 0.1);
+		margin: 0 2%;
+
+		&:hover {
+			background-color: rgba(255, 255, 255, 0.2);
+		}
+	}
+
+	> div {
+		background-color: $white;
+		height: 1.15em;
+		transition: 150ms transform linear;
+		width: 1.15em;
+
+		@include break-large() {
+			height: 1.5em;
+			width: 1.5em;
+		}
+	}
+}
+
+.masonry-modal-wrapper--arrow-left-container {
+	left: 0;
+	right: auto;
+}
+
+.arrow-left {
+	mask-image: url(images/lightbox/arrow-left.svg);
+}
+
+.arrow-right {
+	mask-image: url(images/lightbox/arrow-right.svg);
+}
+
+.masonry-modal-wrapper--close {
+	background-color: $white;
+	cursor: pointer;
+	height: 2.5em;
+	mask-image: url(images/lightbox/close.svg);
+	mask-size: contain;
+	width: 2.5em;
 }
