--- a/src/components/block-gallery/styles/style/_lightbox.scss
+++ b/src/components/block-gallery/styles/style/_lightbox.scss
@@ -1,4 +1,4 @@
-.masonry-modal-wrapper {
+.coblocks-lightbox {
 	align-items: center;
 	background: rgba(0, 0, 0, 0);
 	display: none;
@@ -19,7 +19,7 @@
 	}
 }
 
-.masonry-modal-wrapper__background {
+.coblocks-lightbox__background {
 	background-repeat: no-repeat;
 	background-size: cover;
 	bottom: -2em;
@@ -30,7 +30,7 @@
 	top: -2em;
 }
 
-.masonry-modal-wrapper__heading {
+.coblocks-lightbox__heading {
 	align-items: center;
 	color: $white;
 	display: flex;
@@ -47,7 +47,7 @@
 	}
 }
 
-.masonry-modal-wrapper__image-container {
+.coblocks-lightbox__image {
 	z-index: 2;
 
 	img {
@@ -61,9 +61,9 @@
 	}
 }
 
-.masonry-modal-wrapper--arrow-right-container,
-.masonry-modal-wrapper--arrow-left-container {
+.coblocks-lightbox__arrow {
 	align-items: center;
+	background-color: transparent;
 	border-radius: 100%;
 	color: $white;
 	cursor: pointer;
@@ -80,6 +80,12 @@
 
 	&:hover {
 		background-color: rgba(255, 255, 255, 0.1);
+	}
+
+	&:focus {
+		background-color: rgba(255, 255, 255, 0.2);
+		box-shadow: inset 0 0 0 1px $white;
+		outline: none;
 	}
 
 	@include break-small() {
@@ -103,33 +109,42 @@
 			width: 1.5em;
 		}
 	}
+
+	.arrow-left {
+		left: -1px;
+		mask-image: url(images/lightbox/arrow-left.svg);
+	}
+
+	.arrow-right {
+		mask-image: url(images/lightbox/arrow-right.svg);
+		right: -1px;
+	}
 }
 
-.masonry-modal-wrapper--arrow-left-container {
+.coblocks-lightbox__arrow--left {
 	left: 0;
 	right: auto;
 }
 
-.arrow-left {
-	left: -1px;
-	mask-image: url(images/lightbox/arrow-left.svg);
-}
-
-.arrow-right {
-	mask-image: url(images/lightbox/arrow-right.svg);
-	right: -1px;
-}
-
-.masonry-modal-wrapper--close {
+.coblocks-lightbox__close {
 	background-color: $white;
+	background-repeat: no-repeat;
 	cursor: pointer;
 	height: 2.5em;
 	mask-image: url(images/lightbox/close.svg);
 	mask-size: contain;
+	padding: 0.5em;
+	padding: 0;
 	transition: transform 0.15s linear;
 	width: 2.5em;
 
 	&:hover {
+		background-color: $white;
+		transform: scale(1.125);
+	}
+
+	&:focus {
+		background-color: $white;
 		transform: scale(1.125);
 	}
 }
